# ai-news-aggregator

./: .env.production  .gitignore  DEPLOYMENT.md  api_server.py  deploy.sh  main.py  pyproject.toml  render.yaml  requirements.txt
app/agent/: news_agent.py
app/scrapers/: rss_scraper.py
web-dashboard/: .env.production  README.md  index.html  package-lock.json  package.json  style.css
web-dashboard/src/: main.ts
